--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -17,7 +17,8 @@ builds:
 
 archives:
   - name_template: '{{ .ProjectName }}_{{ .Version }}_{{ .Os }}_{{ .Arch }}'
-    format: zip
+    formats:
+      - zip
 
 checksum:
   name_template: '{{ .ProjectName }}_{{ .Version }}_SHA256SUMS'
