--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -2,7 +2,7 @@
 version: 2
 
 builds:
-  - binary: '{{ .ProjectName }}_v{{ .Version }}'
+  - binary: "{{ .ProjectName }}_v{{ .Version }}"
     env:
       - CGO_ENABLED=0
     goos:
@@ -13,15 +13,18 @@ builds:
       - amd64
       - arm64
     ldflags:
-      - '-s -w -X main.version={{.Version}}'
+      - "-s -w -X main.version={{.Version}}"
 
 archives:
-  - name_template: '{{ .ProjectName }}_{{ .Version }}_{{ .Os }}_{{ .Arch }}'
+  - name_template: "{{ .ProjectName }}_{{ .Version }}_{{ .Os }}_{{ .Arch }}"
     formats:
       - zip
 
 checksum:
-  name_template: '{{ .ProjectName }}_{{ .Version }}_SHA256SUMS'
+  extra_files:
+    - glob: terraform-registry-manifest.json
+      name_template: "{{ .ProjectName }}_{{ .Version }}_manifest.json"
+  name_template: "{{ .ProjectName }}_{{ .Version }}_SHA256SUMS"
   algorithm: sha256
 
 changelog:
@@ -29,8 +32,8 @@ changelog:
   sort: asc
   filters:
     exclude:
-      - '^test:'
-      - '^ci:'
+      - "^test:"
+      - "^ci:"
       - Merge pull request
       - Merge branch
 
@@ -50,3 +53,5 @@ signs:
 release:
   extra_files:
     - glob: terraform-registry-manifest.json
+      name_template: "{{ .ProjectName }}_{{ .Version }}_manifest.json"
+
