refactor: rename provider from random_ulid to ulid
BREAKING CHANGE: Provider and resource naming has been completely refactored

Provider changes:
- Provider name changed from 'random_ulid' to 'ulid'
- Module name updated to terraform-provider-ulid
- Binary name changed to terraform-provider-ulid

Resource changes:
- Resource type is now 'ulid_random' (was 'random_ulid')
- This provides better clarity and future extensibility

Usage after this change:
```hcl
provider "ulid" {}

resource "ulid_random" "example" {
  prefix = "user_"
}
```

This change addresses naming convention issues where the previous
names with underscores/hyphens created confusing resource identifiers.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -39,5 +39,5 @@ jobs:
 
       - name: Build provider
         run: |
-          go build -o terraform-provider-random_ulid
-          ./terraform-provider-random_ulid 2>&1 | grep -q "This binary is a plugin" || exit 1
+          go build -o terraform-provider-ulid
+          ./terraform-provider-ulid 2>&1 | grep -q "This binary is a plugin" || exit 1
